--- a/admin/index.html
+++ b/admin/index.html
@@ -62,6 +62,15 @@
                     </svg>
                     Statistics
                 </button>
+                <button id="accessBtn" class="btn btn-glass" style="border-color: #ff0050; color: #ff0050;">
+                    <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+                        stroke-linecap="round" stroke-linejoin="round">
+                        <path
+                            d="M21 2l-2 2m-7.61 7.61a5.5 5.5 0 1 1-7.778 7.778 5.5 5.5 0 0 1 7.777-7.777zm0 0L15.5 7.5m0 0l3 3L22 7l-3-3m-3.5 3.5L19 4">
+                        </path>
+                    </svg>
+                    Keys
+                </button>
             </div>
         </header>
 
@@ -123,31 +132,31 @@
                             </select>
                         </div>
 
-                    <div class="form-group">
-                        <label for="pasteFolder">Folder</label>
-                        <div style="display: flex; gap: 8px;">
-                            <select id="pasteFolder" class="select-field">
-                                <option value="">No Folder</option>
-                                <!-- Populated dynamically -->
-                            </select>
-                            <button id="manageFoldersBtn" class="btn btn-glass btn-icon" title="Manage Folders"
-                                type="button">
-                                <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor"
-                                    stroke-width="2">
-                                    <path
-                                        d="M22 19a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h5l2 3h9a2 2 0 0 1 2 2z">
-                                    </path>
-                                </svg>
-                            </button>
+                        <div class="form-group">
+                            <label for="pasteFolder">Folder</label>
+                            <div style="display: flex; gap: 8px;">
+                                <select id="pasteFolder" class="select-field">
+                                    <option value="">No Folder</option>
+                                    <!-- Populated dynamically -->
+                                </select>
+                                <button id="manageFoldersBtn" class="btn btn-glass btn-icon" title="Manage Folders"
+                                    type="button">
+                                    <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                                        stroke-width="2">
+                                        <path
+                                            d="M22 19a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h5l2 3h9a2 2 0 0 1 2 2z">
+                                        </path>
+                                    </svg>
+                                </button>
+                            </div>
                         </div>
                     </div>
-                </div>
 
-                <div class="form-group">
-                    <label for="pastePassword">Password (Optional)</label>
-                    <input type="password" id="pastePassword" placeholder="Protect with password..."
-                        class="input-field" autocomplete="new-password">
-                </div>
+                    <div class="form-group">
+                        <label for="pastePassword">Password (Optional)</label>
+                        <input type="password" id="pastePassword" placeholder="Protect with password..."
+                            class="input-field" autocomplete="new-password">
+                    </div>
 
                     <div class="form-group">
                         <div
@@ -287,6 +296,37 @@
                 <div id="folderList" class="folder-list">
                     <!-- Dynamically populated -->
                 </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Access Key Modal -->
+    <div id="accessModal" class="modal">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h3>Access Keys</h3>
+                <button id="closeAccessBtn" class="btn-icon">
+                    <svg width="18" height="18" viewBox="0 0 18 18" fill="none">
+                        <path d="M14 4L4 14M4 4L14 14" stroke="currentColor" stroke-width="2" stroke-linecap="round" />
+                    </svg>
+                </button>
+            </div>
+            <div style="text-align: center; padding: 20px;">
+                <p style="color: #888; margin-bottom: 20px;">Generate a new key to grant private access.</p>
+                <div
+                    style="display: flex; gap: 10px; justify-content: center; align-items: center; margin-bottom: 20px;">
+                    <input type="text" id="generatedKey" readonly class="input-field"
+                        style="text-align: center; font-family: monospace; font-size: 1.2rem; border-color: #ff0050; color: #ff0050;"
+                        placeholder="Press Generate...">
+                    <button id="copyKeyBtn" class="btn-icon" title="Copy">
+                        <svg width="20" height="20" viewBox="0 0 20 20" fill="none">
+                            <rect x="7" y="7" width="10" height="10" rx="2" stroke="currentColor" stroke-width="2" />
+                            <path d="M13 3H5C3.89543 3 3 3.89543 3 5V13" stroke="currentColor" stroke-width="2" />
+                        </svg>
+                    </button>
+                </div>
+                <button id="generateKeyBtn" class="btn btn-primary btn-large"
+                    style="background: #ff0050; color: white;">Generate New Key</button>
             </div>
         </div>
     </div>
