Trim access keys to prevent copy-paste errors

--- a/public/index.html
+++ b/public/index.html
@@ -950,7 +950,7 @@
         }
 
         window.submitKey = async function () {
-            const key = document.getElementById('accessKeyInput').value;
+            const key = document.getElementById('accessKeyInput').value.trim();
             const btn = document.querySelector('#keyModal .btn-submit');
             if (!key) return alert('Enter a key.');
             btn.disabled = true;
