--- a/public/index.html
+++ b/public/index.html
@@ -522,6 +522,52 @@
         </div>
     </div>
 
+    <!-- Account Creation Modal -->
+    <div id="accountModal" class="modal-overlay">
+        <div class="modal-box" style="text-align: center;">
+            <div style="font-size: 3rem; margin-bottom: 1rem;">🔓 ✅</div>
+            <h2>Access Granted</h2>
+            <p style="color: #ccc; margin-bottom: 2rem;">
+                Secure your session by creating an account. This allows you to login without the key next time.
+            </p>
+
+            <div class="auth-buttons">
+                <button type="button" class="btn-submit auth-google" onclick="handleGoogleLogin()">
+                    <svg width="20" height="20" viewBox="0 0 24 24"
+                        style="margin-right: 10px; background: white; border-radius: 50%;">
+                        <path
+                            d="M22.56 12.25c0-.78-.07-1.53-.2-2.25H12v4.26h5.92c-.26 1.37-1.04 2.53-2.21 3.31v2.77h3.57c2.08-1.92 3.28-4.74 3.28-8.09z"
+                            fill="#4285F4" />
+                        <path
+                            d="M12 23c2.97 0 5.46-.98 7.28-2.66l-3.57-2.77c-.98.66-2.23 1.06-3.71 1.06-2.86 0-5.29-1.93-6.16-4.53H2.18v2.84C3.99 20.53 7.7 23 12 23z"
+                            fill="#34A853" />
+                        <path
+                            d="M5.84 14.09c-.22-.66-.35-1.36-.35-2.09s.13-1.43.35-2.09V7.07H2.18C1.43 8.55 1 10.22 1 12s.43 3.45 1.18 4.93l2.85-2.84z"
+                            fill="#FBBC05" />
+                        <path
+                            d="M12 5.38c1.62 0 3.06.56 4.21 1.64l3.15-3.15C17.45 2.09 14.97 1 12 1 7.7 1 3.99 3.47 2.18 7.07l3.66 2.84c.87-2.6 3.3-4.53 6.16-4.53z"
+                            fill="#EA4335" />
+                    </svg>
+                    Continue with Google
+                </button>
+
+                <button type="button" class="btn-submit auth-discord"
+                    onclick="window.location.href='/api/access/auth/discord/login'">
+                    <svg width="20" height="20" viewBox="0 0 24 24" style="margin-right: 10px; vertical-align: bottom;">
+                        <path fill="currentColor"
+                            d="M20.317 4.37a19.791 19.791 0 0 0-4.885-1.515.074.074 0 0 0-.079.037c-.21.375-.444.864-.608 1.25a18.27 18.27 0 0 0-5.487 0 12.64 12.64 0 0 0-.617-1.25.077.077 0 0 0-.079-.037A19.736 19.736 0 0 0 3.677 4.37a.07.07 0 0 0-.032.027C.533 9.046-.32 13.58.099 18.057a.082.082 0 0 0 .031.057 19.9 19.9 0 0 0 5.993 3.03.078.078 0 0 0 .084-.028 14.09 14.09 0 0 0 1.226-1.994.076.076 0 0 0-.041-.106 13.107 13.107 0 0 1-1.872-.892.077.077 0 0 1-.008-.128 10.2 10.2 0 0 0 .372-.292.074.074 0 0 1 .077-.01c3.928 1.793 8.18 1.793 12.062 0a.074.074 0 0 1 .078.01c.12.098.246.198.373.292a.077.077 0 0 1-.006.127 12.299 12.299 0 0 1-1.873.892.077.077 0 0 0-.041.107c.36.698.772 1.362 1.225 1.993a.076.076 0 0 0 .084.028 19.839 19.839 0 0 0 6.002-3.03.077.077 0 0 0 .032-.054c.5-5.177-.838-9.674-3.549-13.66a.061.061 0 0 0-.031-.03zM8.02 15.33c-1.183 0-2.157-1.085-2.157-2.419 0-1.333.956-2.419 2.157-2.419 1.21 0 2.176 1.086 2.157 2.419 0 1.334-.956 2.42-2.157 2.419zm7.975 0c-1.183 0-2.157-1.085-2.157-2.419 0-1.333.955-2.419 2.157-2.419 1.21 0 2.176 1.086 2.157 2.419 0 1.334-.946 2.42-2.157 2.419z" />
+                    </svg>
+                    Continue with Discord
+                </button>
+
+                <p style="margin-top: 2rem;">
+                    <a href="#" onclick="skipAccountCreation(); return false;"
+                        style="color: #666; font-size: 0.8rem;">Skip, just take me to pastes &rarr;</a>
+                </p>
+            </div>
+        </div>
+    </div>
+
     <!-- Additional Styles for Auth -->
     <style>
         .auth-discord {
@@ -1016,6 +1062,125 @@
                     setTimeout(() => hint.style.opacity = 0.8, 50);
                 }
             }, 100);
+        }
+    </script>
+    <!-- Firebase SDKs -->
+    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth-compat.js"></script>
+    <script src="/public/firebase-config.js"></script>
+
+    <script>
+        let currentAccessKey = null;
+
+        window.submitKey = async function () {
+            const key = document.getElementById('accessKeyInput').value.trim();
+            const btn = document.querySelector('#keyModal .btn-submit');
+            if (!key) return alert('Enter a key.');
+
+            btn.disabled = true;
+            btn.textContent = 'Verifying...';
+            try {
+                // Save key temporarily for Discord redirect flow
+                localStorage.setItem('temp_access_key', key);
+
+                const res = await fetch('/api/access/verify', {
+                    method: 'POST',
+                    headers: { 'Content-Type': 'application/json' },
+                    body: JSON.stringify({ key })
+                });
+                const data = await res.json();
+                if (data.success) {
+                    currentAccessKey = data.key;
+
+                    if (data.userId) {
+                        // Already linked
+                        localStorage.setItem('private_access_key', data.key);
+                        closeModals();
+                        navigateTo('/public');
+                    } else {
+                        // Prompt Account Creation
+                        closeModals();
+                        document.getElementById('accountModal').classList.add('active');
+                    }
+                } else {
+                    alert(data.error || 'Invalid key.');
+                }
+            } catch (e) {
+                alert('Verification failed.');
+            } finally {
+                btn.disabled = false;
+                btn.textContent = 'Unlock';
+            }
+        };
+
+        window.handleGoogleLogin = function () {
+            if (typeof firebase === 'undefined') return alert('Firebase not configured. Check console.');
+
+            const provider = new firebase.auth.GoogleAuthProvider();
+            firebase.auth().signInWithPopup(provider)
+                .then((result) => {
+                    const user = result.user;
+                    // Backend Login
+                    fetch('/api/auth/google', {
+                        method: 'POST',
+                        headers: { 'Content-Type': 'application/json' },
+                        body: JSON.stringify({
+                            uid: user.uid,
+                            email: user.email,
+                            photoURL: user.photoURL
+                        })
+                    })
+                        .then(res => res.json())
+                        .then(data => {
+                            if (data.success) {
+                                if (currentAccessKey) {
+                                    // Link Key
+                                    fetch('/api/auth/link-key', {
+                                        method: 'POST',
+                                        headers: { 'Content-Type': 'application/json' },
+                                        body: JSON.stringify({ key: currentAccessKey })
+                                    }).finally(() => {
+                                        localStorage.setItem('private_access_key', currentAccessKey);
+                                        document.getElementById('accountModal').classList.remove('active');
+                                        navigateTo('/public');
+                                    });
+                                } else {
+                                    document.getElementById('accountModal').classList.remove('active');
+                                    navigateTo('/public');
+                                }
+                            } else {
+                                alert('Login failed');
+                            }
+                        });
+                }).catch((error) => {
+                    console.error(error);
+                    alert('Sign-In Error: ' + error.message);
+                });
+        };
+
+        window.skipAccountCreation = function () {
+            if (currentAccessKey) {
+                localStorage.setItem('private_access_key', currentAccessKey);
+            }
+            document.getElementById('accountModal').classList.remove('active');
+            navigateTo('/public');
+        };
+
+        // Handle URL Params for Discord linking
+        const urlParams = new URLSearchParams(window.location.search);
+        if (urlParams.get('action') === 'link_key' && localStorage.getItem('temp_access_key')) {
+            // We returned from Discord Login
+            const key = localStorage.getItem('temp_access_key');
+            fetch('/api/auth/link-key', {
+                method: 'POST',
+                headers: { 'Content-Type': 'application/json' },
+                body: JSON.stringify({ key })
+            }).then(() => {
+                localStorage.setItem('private_access_key', key);
+                localStorage.removeItem('temp_access_key');
+                window.history.replaceState({}, '', '/public'); // Clean URL
+                navigateTo('/public');
+            });
         }
     </script>
 </body>
