--- a/public/index.html
+++ b/public/index.html
@@ -21,11 +21,133 @@
     }
     </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.3/TweenMax.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/Draggable.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     <script src="/public/motion-blur.js"></script>
     <style>
+        /* Carousel CSS */
+        .gallery {
+            position: absolute;
+            width: 100%;
+            height: 100vh;
+            overflow: hidden;
+            background: #050505;
+        }
+
+        .cards {
+            position: absolute;
+            width: 20rem;
+            height: 28rem;
+            top: 40%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            perspective: 1000px;
+            pointer-events: none;
+            /* Let clicks pass to items? No, items need events */
+        }
+
+        .cards li {
+            pointer-events: auto;
+        }
+
+        .cards li {
+            list-style: none;
+            padding: 2rem;
+            margin: 0;
+            width: 20rem;
+            height: 28rem;
+            text-align: left;
+            position: absolute;
+            top: 0;
+            left: 0;
+            border-radius: 1rem;
+            background: rgba(10, 10, 10, 0.95);
+            border: 1px solid rgba(255, 255, 255, 0.1);
+            color: #fff;
+            display: flex;
+            flex-direction: column;
+            overflow: hidden;
+            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.5);
+            backdrop-filter: blur(10px);
+            cursor: pointer;
+        }
+
+        .cards li.private-card {
+            border-color: rgba(255, 0, 110, 0.3);
+            box-shadow: 0 0 30px rgba(255, 0, 110, 0.1);
+        }
+
+        .cards li h3 {
+            font-size: 1.5rem;
+            margin: 0 0 1rem 0;
+            color: #00f5ff;
+            font-weight: 700;
+        }
+
+        .cards li.private-card h3 {
+            color: #ff006e;
+        }
+
+        .card-meta {
+            font-size: 0.8rem;
+            color: #888;
+            margin-bottom: 1rem;
+            display: flex;
+            gap: 10px;
+        }
+
+        .card-preview {
+            flex: 1;
+            font-family: 'JetBrains Mono', monospace;
+            font-size: 0.8rem;
+            color: #ccc;
+            opacity: 0.8;
+            overflow: hidden;
+            white-space: pre-wrap;
+            mask-image: linear-gradient(to bottom, black 50%, transparent 100%);
+            -webkit-mask-image: linear-gradient(to bottom, black 50%, transparent 100%);
+            pointer-events: none;
+        }
+
+        .actions {
+            position: absolute;
+            bottom: 50px;
+            left: 50%;
+            transform: translateX(-50%);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            gap: 2rem;
+            z-index: 100;
+        }
+
+        .nav-btn {
+            background: rgba(255, 255, 255, 0.05);
+            border: 1px solid rgba(255, 255, 255, 0.1);
+            color: white;
+            padding: 12px 24px;
+            border-radius: 30px;
+            cursor: pointer;
+            font-weight: 600;
+            transition: all 0.3s;
+            text-transform: uppercase;
+            font-size: 0.9rem;
+            letter-spacing: 1px;
+        }
+
+        .nav-btn:hover {
+            background: rgba(255, 255, 255, 0.2);
+            transform: scale(1.05);
+        }
+
+        .drag-proxy {
+            visibility: hidden;
+            position: absolute;
+        }
+
         /* Shared Styles from Viewer */
         .container {
             max-width: 900px;
@@ -353,55 +475,38 @@
     </div>
 
     <!-- View: VIEWER (Merged) -->
-    <div id="view-viewer" style="display: none; position: relative; z-index: 20; padding: 2rem;">
-        <div class="container" style="max-width: 900px; margin: 0 auto;">
-            <!-- List View -->
-            <div id="listView">
-                <header>
-                    <h1
-                        style="font-size: 2.5rem; background: linear-gradient(135deg, #00f5ff, #7b42ff); -webkit-background-clip: text; background-clip: text; -webkit-text-fill-color: transparent; margin-bottom: 2rem;">
-                        Public Pastes</h1>
-                </header>
-                <div id="pasteList" class="paste-list">
-                    <p>Loading pastes...</p>
-                </div>
-            </div>
+    <!-- View: VIEWER (Carousel) -->
+    <div id="view-viewer"
+        style="display: none; position: absolute; top: 0; left: 0; width: 100%; min-height: 100vh; z-index: 20; background: #050505;">
 
-            <!-- Detail View -->
-            <div id="detailView" style="display: none;">
+        <!-- Gallery List -->
+        <div id="listView" class="gallery">
+            <ul class="cards"></ul>
+            <div class="actions">
+                <button class="nav-btn prev">&larr; Prev</button>
+                <button class="nav-btn next">Next &rarr;</button>
+            </div>
+            <div class="drag-proxy"></div>
+        </div>
+
+        <!-- Detail View Overlay -->
+        <div id="detailView"
+            style="display: none; position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: #0a0a0a; z-index: 50; overflow-y: auto;">
+            <div class="container" style="max-width: 900px; margin: 0 auto; padding: 4rem 2rem;">
                 <header class="header">
                     <div class="logo">
-                        <div class="logo-icon">
-                            <svg width="32" height="32" viewBox="0 0 32 32" fill="none">
-                                <path
-                                    d="M8 4L24 4C26.2091 4 28 5.79086 28 8V24C28 26.2091 26.2091 28 24 28H8C5.79086 28 4 26.2091 4 24V8C4 5.79086 5.79086 4 8 4Z"
-                                    stroke="url(#gradient1)" stroke-width="2" />
-                                <path d="M10 12H22M10 16H22M10 20H18" stroke="url(#gradient2)" stroke-width="2"
-                                    stroke-linecap="round" />
-                                <defs>
-                                    <linearGradient id="gradient1" x1="4" y1="4" x2="28" y2="28">
-                                        <stop stop-color="#00f5ff" />
-                                        <stop offset="1" stop-color="#7b42ff" />
-                                    </linearGradient>
-                                    <linearGradient id="gradient2" x1="10" y1="12" x2="22" y2="20">
-                                        <stop stop-color="#ff006e" />
-                                        <stop offset="1" stop-color="#ffbe0b" />
-                                    </linearGradient>
-                                </defs>
-                            </svg>
-                        </div>
                         <div class="logo-text">
-                            <h1>PasteBin Pro</h1>
-                            <span class="badge">Public View</span>
+                            <h1 style="font-size: 1.5rem;">PasteBin Pro</h1>
+                            <span class="badge">Detail View</span>
                         </div>
                     </div>
                     <div class="header-actions">
-                        <button id="backBtn" class="btn btn-secondary">Back</button>
+                        <button id="backBtn" class="btn btn-secondary">Back to Gallery</button>
                         <button id="rawBtn" class="btn btn-glass">Raw</button>
                         <button id="copyBtn" class="btn btn-secondary">Copy</button>
                     </div>
                 </header>
-                <main id="mainContent">
+                <main id="mainContent" style="margin-top: 2rem;">
                     <div id="detailLoading" class="state-container" style="display: none;">
                         <div class="loader"></div>
                         <p>Loading paste...</p>
@@ -711,78 +816,166 @@
                 const res = await fetch('/api/pastes/public-list', { headers });
                 const pastes = await res.json();
 
-                if (pastes.length === 0) {
-                    pasteListContainer.innerHTML = '<div class="empty-state"><p>No pastes found.</p></div>';
+                const cardsContainer = document.querySelector('.cards');
+                if (!cardsContainer) {
+                    console.error('Cards container not found');
                     return;
                 }
 
-                const renderGroup = (items, title, icon) => {
-                    if (items.length === 0) return '';
-                    let html = `<div class="paste-section"><h2 class="section-title" style="margin: 2rem 0 1rem; color: #fff; font-size: 1.5rem; border-bottom: 1px solid rgba(255,255,255,0.1); padding-bottom: 0.5rem;">${icon} ${title}</h2>`;
+                if (pastes.length === 0) {
+                    cardsContainer.innerHTML = '<li style="display:flex; justify-content:center; align-items:center; background:none; border:none; box-shadow:none;"><h3>No Pastes Found</h3></li>';
+                    return;
+                }
 
-                    const folders = {};
-                    const loose = [];
+                // Populate Cards
+                cardsContainer.innerHTML = pastes.map(p => `
+                    <li onclick="showDetail('${p.id}')" class="${p.isPrivate ? 'private-card' : ''}">
+                        <h3>${p.title || 'Untitled'}</h3>
+                        <div class="card-meta">
+                            <span>${p.language}</span>
+                            ${p.isPrivate ? '<span>🔒 Private</span>' : ''}
+                        </div>
+                        <div class="card-preview">${p.content ? p.content.substring(0, 200).replace(/</g, '&lt;') : ''}</div>
+                    </li>
+                `).join('');
 
-                    items.forEach(p => {
-                        if (p.folderName) {
-                            if (!folders[p.folderName]) folders[p.folderName] = [];
-                            folders[p.folderName].push(p);
-                        } else {
-                            loose.push(p);
-                        }
-                    });
-
-                    if (loose.length > 0) {
-                        html += `<div class="folder-group">${loose.map(p => renderPasteItem(p)).join('')}</div>`;
-                    }
-                    for (const [name, folderItems] of Object.entries(folders)) {
-                        html += `
-                            <details class="folder-group" open>
-                                <summary class="folder-title">📁 ${name} <span class="folder-count">${folderItems.length}</span></summary>
-                                <div class="folder-items">${folderItems.map(p => renderPasteItem(p)).join('')}</div>
-                            </details>
-                        `;
-                    }
-                    html += `</div>`;
-                    return html;
-                };
-
-                const privatePastes = pastes.filter(p => p.isPrivate);
-                const publicPastes = pastes.filter(p => !p.isPrivate);
-
-                let finalHtml = '';
-                // Render Private First if available
-                if (privatePastes.length > 0) finalHtml += renderGroup(privatePastes, 'Private Pastes', '🔒');
-                if (publicPastes.length > 0) finalHtml += renderGroup(publicPastes, 'Public Pastes', '🌍');
-
-                pasteListContainer.innerHTML = finalHtml || '<p>No pastes found.</p>';
-
-                // Highjack links
-                document.querySelectorAll('a.paste-item').forEach(link => {
-                    link.addEventListener('click', (e) => {
-                        e.preventDefault();
-                        const href = link.getAttribute('href');
-                        navigateTo(href);
-                    });
-                });
+                // Initialize GSAP Loop
+                setTimeout(() => {
+                    if (window.ScrollTrigger) ScrollTrigger.getAll().forEach(t => t.kill());
+                    initCarousel();
+                }, 100);
 
             } catch (e) {
                 console.error(e);
-                pasteListContainer.innerHTML = '<p>Error loading pastes.</p>';
             }
         }
 
-        function renderPasteItem(p) {
-            return `
-                <a href="/v/${p.id}" class="paste-item">
-                    <div>
-                        <div class="paste-title">${p.hasPassword ? '🔒 ' : ''}${p.title || 'Untitled'}</div>
-                        <div class="paste-meta">${new Date(p.createdAt).toLocaleDateString()}</div>
-                    </div>
-                    <div><span class="badge">${p.views} views</span></div>
-                </a>
-            `;
+        function initCarousel() {
+            gsap.registerPlugin(ScrollTrigger, Draggable);
+
+            let iteration = 0;
+
+            // Initial state
+            gsap.set('.cards li', { xPercent: 400, opacity: 0, scale: 0 });
+
+            const spacing = 0.1,
+                snapTime = gsap.utils.snap(spacing),
+                cardsItems = gsap.utils.toArray('.cards li'),
+                animateFunc = element => {
+                    const tl = gsap.timeline();
+                    tl.fromTo(element, { scale: 0, opacity: 0 }, { scale: 1, opacity: 1, zIndex: 100, duration: 0.5, yoyo: true, repeat: 1, ease: "power1.in", immediateRender: false })
+                        .fromTo(element, { xPercent: 400 }, { xPercent: -400, duration: 1, ease: "none", immediateRender: false }, 0);
+                    return tl;
+                },
+                seamlessLoop = buildSeamlessLoop(cardsItems, spacing, animateFunc),
+                playhead = { offset: 0 },
+                wrapTime = gsap.utils.wrap(0, seamlessLoop.duration()),
+                scrub = gsap.to(playhead, {
+                    offset: 0,
+                    onUpdate() {
+                        seamlessLoop.time(wrapTime(playhead.offset));
+                    },
+                    duration: 0.5,
+                    ease: "power3",
+                    paused: true
+                }),
+                trigger = ScrollTrigger.create({
+                    start: 0,
+                    onUpdate(self) {
+                        let scroll = self.scroll();
+                        if (scroll > self.end - 1) {
+                            wrap(1, 2);
+                        } else if (scroll < 1 && self.direction < 0) {
+                            wrap(-1, self.end - 2);
+                        } else {
+                            scrub.vars.offset = (iteration + self.progress) * seamlessLoop.duration();
+                            scrub.invalidate().restart();
+                        }
+                    },
+                    end: "+=3000",
+                    pin: ".gallery"
+                }),
+                progressToScroll = progress => gsap.utils.clamp(1, trigger.end - 1, gsap.utils.wrap(0, 1, progress) * trigger.end),
+                wrap = (iterationDelta, scrollTo) => {
+                    iteration += iterationDelta;
+                    trigger.scroll(scrollTo);
+                    trigger.update();
+                };
+
+            ScrollTrigger.addEventListener("scrollEnd", () => scrollToOffset(scrub.vars.offset));
+
+            function scrollToOffset(offset) {
+                let snappedTime = snapTime(offset),
+                    progress = (snappedTime - seamlessLoop.duration() * iteration) / seamlessLoop.duration(),
+                    scroll = progressToScroll(progress);
+                if (progress >= 1 || progress < 0) {
+                    return wrap(Math.floor(progress), scroll);
+                }
+                trigger.scroll(scroll);
+            }
+
+            const nextBtn = document.querySelector(".next");
+            const prevBtn = document.querySelector(".prev");
+            if (nextBtn) nextBtn.replaceWith(nextBtn.cloneNode(true));
+            if (prevBtn) prevBtn.replaceWith(prevBtn.cloneNode(true));
+
+            document.querySelector(".next").addEventListener("click", () => scrollToOffset(scrub.vars.offset + spacing));
+            document.querySelector(".prev").addEventListener("click", () => scrollToOffset(scrub.vars.offset - spacing));
+
+
+            Draggable.create(".drag-proxy", {
+                type: "x",
+                trigger: ".cards",
+                onPress() {
+                    this.startOffset = scrub.vars.offset;
+                },
+                onDrag() {
+                    scrub.vars.offset = this.startOffset + (this.startX - this.x) * 0.001;
+                    scrub.invalidate().restart();
+                },
+                onDragEnd() {
+                    scrollToOffset(scrub.vars.offset);
+                }
+            });
         }
+
+        function buildSeamlessLoop(items, spacing, animateFunc) {
+            let overlap = Math.ceil(1 / spacing),
+                startTime = items.length * spacing + 0.5,
+                loopTime = (items.length + overlap) * spacing + 1,
+                rawSequence = gsap.timeline({ paused: true }),
+                seamlessLoop = gsap.timeline({
+                    paused: true,
+                    repeat: -1,
+                    onRepeat() {
+                        this._time === this._dur && (this._tTime += this._dur - 0.01);
+                    }
+                }),
+                l = items.length + overlap * 2,
+                time, i, index;
+
+            for (i = 0; i < l; i++) {
+                index = i % items.length;
+                time = i * spacing;
+                rawSequence.add(animateFunc(items[index]), time);
+                i <= items.length && seamlessLoop.add("label" + i, time);
+            }
+
+            rawSequence.time(startTime);
+            seamlessLoop.to(rawSequence, {
+                time: loopTime,
+                duration: loopTime - startTime,
+                ease: "none"
+            }).fromTo(rawSequence, { time: overlap * spacing + 1 }, {
+                time: startTime,
+                duration: startTime - (overlap * spacing + 1),
+                immediateRender: false,
+                ease: "none"
+            });
+            return seamlessLoop;
+        }
+
+        function renderPasteItem(p) { return ''; } // Deprecated helper
 
         async function showDetail(id) {
             listView.style.display = 'none';
