--- a/public/index.html
+++ b/public/index.html
@@ -64,20 +64,34 @@
             top: 0;
             left: 0;
             border-radius: 1rem;
-            background: rgba(10, 10, 10, 0.95);
-            border: 1px solid rgba(255, 255, 255, 0.1);
+            /* Vibrant Gradient Background */
+            background: linear-gradient(160deg, rgba(25, 25, 30, 0.95) 0%, rgba(5, 5, 8, 0.98) 100%);
+            border: 1px solid rgba(255, 255, 255, 0.15);
             color: #fff;
             display: flex;
             flex-direction: column;
             overflow: hidden;
-            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.5);
+            box-shadow: 0 10px 40px rgba(0, 0, 0, 0.6);
             backdrop-filter: blur(10px);
             cursor: pointer;
+            transition: border-color 0.3s, box-shadow 0.3s;
         }
 
         .cards li.private-card {
-            border-color: rgba(255, 0, 110, 0.3);
-            box-shadow: 0 0 30px rgba(255, 0, 110, 0.1);
+            /* Distinct Private Style */
+            background: linear-gradient(160deg, rgba(40, 10, 20, 0.95) 0%, rgba(10, 5, 5, 0.98) 100%);
+            border: 1px solid rgba(255, 0, 110, 0.5);
+            box-shadow: 0 0 30px rgba(255, 0, 110, 0.25), inset 0 0 20px rgba(255, 0, 110, 0.05);
+        }
+
+        .cards li:hover {
+            border-color: rgba(255, 255, 255, 0.4);
+            box-shadow: 0 20px 50px rgba(0, 0, 0, 0.8);
+        }
+
+        .cards li.private-card:hover {
+            border-color: rgba(255, 0, 110, 0.8);
+            box-shadow: 0 0 40px rgba(255, 0, 110, 0.4);
         }
 
         .cards li h3 {
@@ -85,10 +99,12 @@
             margin: 0 0 1rem 0;
             color: #00f5ff;
             font-weight: 700;
+            text-shadow: 0 0 15px rgba(0, 245, 255, 0.3);
         }
 
         .cards li.private-card h3 {
             color: #ff006e;
+            text-shadow: 0 0 15px rgba(255, 0, 110, 0.3);
         }
 
         .card-meta {
