--- a/public/index.html
+++ b/public/index.html
@@ -64,8 +64,10 @@
             top: 0;
             left: 0;
             border-radius: 1rem;
-            /* Vibrant Gradient Background */
-            background: linear-gradient(160deg, rgba(25, 25, 30, 0.95) 0%, rgba(5, 5, 8, 0.98) 100%);
+            /* Image with Dark Gradient Overlay */
+            background: linear-gradient(to bottom, rgba(0, 0, 0, 0.1) 0%, rgba(0, 0, 0, 0.95) 100%), url('/public/card-bg.jpg');
+            background-size: cover;
+            background-position: center;
             border: 1px solid rgba(255, 255, 255, 0.15);
             color: #fff;
             display: flex;
@@ -1012,6 +1014,10 @@
         function renderPasteItem(p) { return ''; } // Deprecated helper
 
         async function showDetail(id) {
+            // Disable ScrollTrigger/Draggable to prevent carousel hijacking scroll in Detail View
+            if (window.ScrollTrigger) ScrollTrigger.getAll().forEach(t => t.disable());
+            if (window.Draggable) Draggable.get(".cards")?.disable();
+
             listView.style.display = 'none';
             detailView.style.display = 'block';
 
