Add IP binding for keys and reaction analytics

--- a/admin/index.html
+++ b/admin/index.html
@@ -162,9 +162,9 @@
                         <div
                             style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 8px;">
                             <label for="pasteContent">Content</label>
-                            <button id="uploadImageBtn" class="btn-small btn-glass" title="Upload Image">
-                                🖼️ Add Image
-                                <input type="file" id="imageInput" style="display: none;" accept="image/*">
+                            <button id="uploadImageBtn" class="btn-small btn-glass" title="Upload Media">
+                                🖼️ Add Media
+                                <input type="file" id="imageInput" style="display: none;" accept="image/*,video/*">
                             </button>
                         </div>
                         <textarea id="pasteContent"
