--- a/admin/index.html
+++ b/admin/index.html
@@ -357,7 +357,7 @@
         </div>
     </div>
 
-    <script src="../shared/api.js"></script>
+    <script src="../shared/api.js?v=2"></script>
     <script src="app.js"></script>
 </body>
 
