--- a/public/index.html
+++ b/public/index.html
@@ -534,10 +534,11 @@
     </div>
 
     <!-- Background Media -->
-    <video autoplay muted loop playsinline id="bgVideo"
-        style="position: fixed; top: 0; left: 0; width: 100%; height: 100%; object-fit: cover; z-index: -5; opacity: 0.6; pointer-events: none;">
-        <source src="https://i.imgur.com/5llUoOV.mp4" type="video/mp4">
-    </video>
+    <!-- Background Media -->
+    <div id="video-background-container"
+        style="position: fixed; top: 0; left: 0; width: 100%; height: 100%; z-index: -5; background: #000;">
+    </div>
+    <script src="/public/video-slideshow.js"></script>
 
     <!-- View: ENTRY -->
     <div id="view-entry">
