--- a/public/viewer.html
+++ b/public/viewer.html
@@ -416,11 +416,12 @@
                 detailLoading.style.display = 'none';
                 pasteViewContent.style.display = 'block';
             } catch (err) {
-                if (err.message.includes('401')) {
+                // Check for 401 OR the specific error message "Password required"
+                if (err.message.includes('401') || err.message.includes('Password required')) {
                     const pwd = prompt('🔒 Password required:');
                     if (pwd) {
                         try {
-                            const p = await storage.getPaste(id, true, pwd);
+                            const p = await storage.getPaste(id, true, pwd.trim());
                             renderPasteDetail(p);
                             detailLoading.style.display = 'none';
                             pasteViewContent.style.display = 'block';
